--- a/Prueba_entrada_CC3S2/trivia-game-python/docker-compose.yml
+++ b/Prueba_entrada_CC3S2/trivia-game-python/docker-compose.yml
@@ -1,27 +1,43 @@
-version: "3.8"
+version: '3'
 
 services:
-  web:
-    build: .
-    container_name: trivia_app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
-    environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/trivia_db
-      - SECRET_KEY=mysecretkey
-
   db:
     image: postgres:13
-    container_name: trivia_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
     restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: trivia_db
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=trivia_db
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d trivia_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
+  app:
+    build: .
+    volumes:
+      - .:/app
+    command: /opt/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - "8001:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+
+  test:
+    build: .
+    volumes:
+      - .:/app
+    # Ejecuta los tests usando el python del entorno virtual
+    command: /opt/venv/bin/pytest -v
+    depends_on:
+      db:
+        condition: service_healthy
+        
 volumes:
-  pgdata:
+  postgres_data:
