--- a/Prueba_entrada_CC3S2/trivia-game-python/Dockerfile
+++ b/Prueba_entrada_CC3S2/trivia-game-python/Dockerfile
@@ -2,13 +2,23 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+# Instalar dependencias del sistema para psycopg2
+RUN apt-get update && apt-get install -y \
+    gcc \
+    postgresql-client \
+    libpq-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --upgrade pip && \
-    pip install -r requirements.txt
+RUN python -m venv /opt/venv
+# Activar el entorno virtual
+ENV PATH="/opt/venv/bin:$PATH"
+
+RUN pip install --no-cache-dir --upgrade pip
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-EXPOSE 8000
-
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["pytest", "-v"]
