Inclusión de pruebas de seguridad con bandit.

--- a/Prueba_entrada_CC3S2/trivia-game-python/docker-compose.yml
+++ b/Prueba_entrada_CC3S2/trivia-game-python/docker-compose.yml
@@ -39,5 +39,12 @@ services:
       db:
         condition: service_healthy
         
+  security_scan:
+    build: .
+    volumes:
+      - .:/app
+    # Ejecuta el análisis de seguridad con Bandit
+    command: /opt/venv/bin/bandit -r .
+        
 volumes:
   postgres_data:
