Cambios realizados para resolver el ejercicio 2

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,7 +30,7 @@ jobs:
         pip install behave pytest
 
     - name: Run unit tests (pytest)
-      run: pytest tests/
+      run: pytest tests/ --maxfail=1 --disable-warnings
 
     - name: Run BDD tests (behave)
       run: behave features/
